Update CSS rules to correctly display images for credentials on mobile devices

--- a/src/styles/credentials.css
+++ b/src/styles/credentials.css
@@ -58,17 +58,26 @@
 .cert-card {
     border: 1px solid black;
     width: 90vw;
+    height: 20vh;
     border-radius: 5px;
     box-shadow: 2px 2px;
     display: flex;
     flex-direction: row;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .cert-card img {
-    width: 25%;
+    width: 30%;
     padding-left: 1rem;
+    object-fit: contain;
+}
+
+.cert-card p {
+    text-indent: 0;
 }
 
 .trainings {
